# satellite

./: CHANGELOG.md  Cargo.toml  MIGRATION.md  README.md  publish.sh  update-version.sh
avm/: Cargo.toml
bitcoin/: Cargo.toml  README.md
bitcoin/collections/: Cargo.toml
bitcoin/collections/src/generic/: fixed_bitset.rs  fixed_list.rs  fixed_list_unchecked.rs  fixed_set.rs  mod.rs  push_pop.rs
bitcoin/collections/src/macros/: fixed_array.rs  fixed_option.rs  fixed_set.rs
bitcoin/math/: Cargo.toml
bitcoin/src/: lib.rs  script.rs
bitcoin/transactions/: Cargo.toml
bitcoin/transactions/src/: arch.rs  btc_utxo_holder.rs  calc_fee.rs  consolidation.rs  constants.rs  error.rs  fee_rate.rs  find_btc.rs  input_calc.rs  lib.rs  mempool.rs  util.rs  utxo_info.rs
borsh-derive-internal/: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: checks.rs  config.rs  lib.rs  rust_template.rs
client/: Cargo.toml
client/src/: lib.rs
docs/content/docs/basics/: cpi.mdx  idl.mdx  pda.mdx  program-structure.mdx
docs/content/docs/clients/: rust.mdx  typescript.mdx
docs/content/docs/features/: declare-program.mdx  errors.mdx  events.mdx  zero-copy.mdx
docs/content/docs/quickstart/: local.mdx  solpg.mdx
docs/content/docs/references/: account-types.mdx
docs/content/docs/tokens/: extensions.mdx  index.mdx
docs/content/docs/tokens/basics/: create-mint.mdx  create-token-account.mdx  mint-tokens.mdx  transfer-tokens.mdx
docs/content/docs/updates/: changelog.mdx
docs/content/docs/updates/release-notes/: 0-29-0.mdx  0-30-0.mdx  0-30-1.mdx
idl/: Cargo.toml
idl/spec/: Cargo.toml
idl/spec/src/: lib.rs
idl/src/: build.rs  convert.rs
lang/: Cargo.toml
lang/attribute/access-control/: Cargo.toml
lang/attribute/account/: Cargo.toml
lang/attribute/account/src/: id.rs  lib.rs
lang/attribute/constant/: Cargo.toml
lang/attribute/constant/src/: lib.rs
lang/attribute/error/: Cargo.toml
lang/attribute/error/src/: lib.rs
lang/attribute/event/: Cargo.toml
lang/attribute/event/src/: lib.rs
lang/attribute/program/: Cargo.toml
lang/attribute/program/src/: lib.rs
lang/attribute/program/src/declare_program/: common.rs  mod.rs
lang/attribute/program/src/declare_program/mods/: accounts.rs  client.rs  constants.rs  cpi.rs  errors.rs  internal.rs  mod.rs  types.rs  utils.rs
lang/derive/accounts/: Cargo.toml
lang/derive/accounts/src/: lib.rs
lang/derive/serde/: Cargo.toml
lang/derive/serde/src/: lib.rs
lang/derive/space/: Cargo.toml
lang/src/: context.rs  error.rs  idl.rs  lib.rs
lang/src/accounts/: account.rs  account_loader.rs  interface.rs  interface_account.rs  program.rs
lang/syn/: Cargo.toml
lang/syn/src/: hash.rs  lib.rs
lang/syn/src/codegen/accounts/: bumps.rs  constraints.rs  try_accounts.rs
lang/syn/src/codegen/program/: dispatch.rs  entry.rs  handlers.rs  idl.rs
lang/syn/src/idl/: accounts.rs  mod.rs  program.rs
lang/syn/src/parser/accounts/: constraints.rs  mod.rs
lang/tests/: generics_test.rs  macros.rs  space.rs
serde/: Cargo.toml
serde/src/: lib.rs  number.rs  pubkey.rs  rune_id.rs  utxo.rs
shard_set/: Cargo.toml
shard_set/src/: account_loader.rs  error.rs  example.rs  lib.rs  select.rs  shard_handle.rs  shard_set.rs  split.rs  update.rs
shard_set/src/tests/: common.rs  mod.rs  select_tests.rs
spl/: Cargo.toml
spl/src/: associated_token.rs  governance.rs  idl_build.rs  lib.rs  memo.rs  metadata.rs  mint.rs  stake.rs  token.rs  token_2022.rs  token_interface.rs
spl/src/token_2022_extensions/: cpi_guard.rs  default_account_state.rs  group_member_pointer.rs  group_pointer.rs  immutable_owner.rs  interest_bearing_mint.rs  memo_transfer.rs  metadata_pointer.rs  mint_close_authority.rs  non_transferable.rs  permanent_delegate.rs  token_group.rs  token_metadata.rs  transfer_fee.rs  transfer_hook.rs
tests/anchor-cli-account/programs/account-command/src/: lib.rs
tests/anchor-cli-idl/programs/idl-commands-one/src/: lib.rs
tests/anchor-cli-idl/programs/idl-commands-two/src/: lib.rs
tests/auction-house/programs/auction-house/: Cargo.toml
tests/auction-house/programs/auction-house/src/: lib.rs  utils.rs
tests/bench/programs/bench/: Cargo.toml
tests/bench/programs/bench/src/: lib.rs
tests/cashiers-check/programs/cashiers-check/: Cargo.toml
tests/cashiers-check/programs/cashiers-check/src/: lib.rs
tests/cfo/programs/cfo/: Cargo.toml
tests/cfo/programs/cfo/src/: lib.rs
tests/chat/programs/chat/src/: lib.rs
tests/composite/programs/composite/src/: lib.rs
tests/cpi-returns/programs/callee/src/: lib.rs
tests/cpi-returns/programs/caller/src/: lib.rs
tests/custom-coder/programs/native-system/src/: lib.rs
tests/custom-coder/programs/spl-associated-token/src/: lib.rs
tests/custom-coder/programs/spl-token/src/: lib.rs
tests/custom-discriminator/programs/ambiguous-discriminator/src/: lib.rs
tests/custom-discriminator/programs/custom-discriminator/src/: lib.rs
tests/declare-id/programs/declare-id/src/: lib.rs
tests/declare-program/programs/declare-program/src/: lib.rs
tests/errors/programs/errors/src/: lib.rs
tests/escrow/programs/escrow/: Cargo.toml
tests/escrow/programs/escrow/src/: lib.rs
tests/events/programs/events/src/: lib.rs
tests/floats/programs/floats/src/: lib.rs
tests/idl/programs/docs/src/: lib.rs
tests/idl/programs/generics/src/: lib.rs
tests/idl/programs/idl/: Cargo.toml
tests/idl/programs/idl/src/: lib.rs
tests/idl/programs/new-idl/src/: lib.rs
tests/ido-pool/programs/ido-pool/: Cargo.toml
tests/lockup/programs/lockup/: Cargo.toml
tests/lockup/programs/registry/: Cargo.toml
tests/misc/programs/misc/: Cargo.toml
tests/misc/programs/misc-optional/: Cargo.toml
tests/misc/programs/remaining-accounts/: Cargo.toml
tests/misc/programs/remaining-accounts/src/: context.rs  lib.rs
tests/pda-derivation/programs/pda-derivation/: Cargo.toml
tests/spl/metadata/programs/metadata/: Cargo.toml
tests/spl/metadata/programs/metadata/src/: lib.rs
tests/swap/programs/swap/: Cargo.toml
tests/tictactoe/programs/tictactoe/: Cargo.toml
(+42 files in other folders)
