[profile.release]
lto = true

[profile.release.package.anchor-cli]
codegen-units = 1

[workspace]
members = [
    "borsh-derive-internal",
    "avm",
    "cli",
    "client",
    "idl",
    "lang",
    "lang/attribute/*",
    "lang/derive/*",
    "lang/syn",
    "spl",
    "bitcoin",
    "shard_set",
]
exclude = [
    "tests/swap/deps/openbook-dex",
    "tests/cfo/deps/openbook-dex",
]
resolver = "2"

[workspace.dependencies]
borsh-derive-internal-satellite = { path = "./borsh-derive-internal", version = "0.11.0" }
arch_program = { version = "0.5.9" }

satellite-bitcoin = { path = "./bitcoin" }
