[package]
name = "satellite-bitcoin"
version = "0.1.3"
edition = "2021"
description = "High-level Bitcoin utilities and re-exports for the Satellite project."
license = "MIT OR Apache-2.0"
repository = "https://github.com/saturnbtc/satellite"
readme = "README.md"
keywords = ["bitcoin", "satellite"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
satellite-math = { version = "0.1.3", path = "./math" }
satellite-collections = { version = "0.1.3", path = "./collections" }
satellite-bitcoin-transactions = { version = "0.1.3", path = "./transactions" } 
borsh = { version = "1", default-features = false }
serde = { version = "1", features = ["derive"], optional = true }
bitcoin = { version = "0.32.5" }

[features]
# Forward common features to the underlying `satellite-bitcoin-transactions` crate so
# consumers can enable them directly on `satellite-bitcoin`.
# We keep the same feature names for convenience.

default = [
    "satellite-bitcoin-transactions/utxo-consolidation",
    "satellite-bitcoin-transactions/runes",
    "satellite-collections/borsh",
    "serde",
]

runes = ["satellite-bitcoin-transactions/runes"]
utxo-consolidation = ["satellite-bitcoin-transactions/utxo-consolidation"]
serde = ["satellite-bitcoin-transactions/serde", "dep:serde"]
utoipa = ["satellite-bitcoin-transactions/utoipa"] 
borsh = ["satellite-collections/borsh"]