[package]
name = "satellite-lang-idl"
version.workspace = true
authors = ["Anchor Maintainers <accounts@200ms.io>"]
repository = "https://github.com/coral-xyz/anchor"
edition.workspace = true
license = "Apache-2.0"
description = "Anchor framework IDL"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
build = ["regex"]
convert = ["heck", "sha2"]

[dependencies]
satellite-lang-idl-spec = { workspace = true }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# `build` feature only
regex = { version = "1", optional = true }

# `convert` feature only
heck = { version = "0.3", optional = true }
sha2 = { version = "0.10", optional = true }
