[package]
name = "satellite-lang"
version.workspace = true
authors = ["Satellite Maintainers <contact@saturnbtc.io>"]
repository = "https://github.com/saturnbtc/satellite"
edition.workspace = true
license = "Apache-2.0"
description = "Arch Network eDSL"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
allow-missing-optionals = ["satellite-derive-accounts/allow-missing-optionals"]
satellite-debug = [
	"satellite-attribute-access-control/satellite-debug",
	"satellite-attribute-account/satellite-debug",
	"satellite-attribute-constant/satellite-debug",
	"satellite-attribute-error/satellite-debug",
	"satellite-attribute-program/satellite-debug",
	"satellite-derive-accounts/satellite-debug",
]
derive = []
event-cpi = ["satellite-attribute-event/event-cpi"]
idl-build = [
	"satellite-attribute-account/idl-build",
	"satellite-attribute-constant/idl-build",
	"satellite-attribute-error/idl-build",
	"satellite-attribute-program/idl-build",
	"satellite-derive-accounts/idl-build",
	"satellite-derive-serde/idl-build",
	"satellite-lang-idl/build",
]
init-if-needed = ["satellite-derive-accounts/init-if-needed"]
interface-instructions = ["satellite-attribute-program/interface-instructions"]
lazy-account = [
	"satellite-attribute-account/lazy-account",
	"satellite-derive-serde/lazy-account",
]

[dependencies]
satellite-attribute-event = { workspace = true }
satellite-attribute-access-control = { workspace = true }
satellite-attribute-account = { workspace = true }
satellite-attribute-constant = { workspace = true }
satellite-attribute-error = { workspace = true }
satellite-attribute-program = { workspace = true }
satellite-derive-accounts = { workspace = true }
satellite-derive-serde = { workspace = true }
satellite-derive-space = { workspace = true }

# `satellite-lang-idl` should only be included with `idl-build` feature
satellite-lang-idl = { workspace = true, optional = true }

base64 = "0.21"
bincode = "1"
borsh = { version = "1.4.0" }
bytemuck = "1.14"
arch_program = { version = "0.5.15" }
thiserror = "1.0.61"
