[package]
name = "satellite-shard"
version = "0.1.0"
edition = "2021"

[dependencies]
arch_program = { version = "0.5.10" }
bitcoin = "0.32.5"
bytemuck = "1.14"
satellite-bitcoin = { path = "../bitcoin", version = "0.1.0" }
satellite-lang = { path = "../lang", version = "0.31.1" }
ordinals = { version = "0.0.14", optional = true }

[features]
default = ["runes", "utxo-consolidation"]
runes = ["satellite-bitcoin/runes", "ordinals"]
utxo-consolidation = ["satellite-bitcoin/utxo-consolidation"]
utoipa = ["satellite-bitcoin/utoipa"]
serde = ["satellite-bitcoin/serde"]