[package]
name = "satellite-shard"
version.workspace = true
edition.workspace = true
description = "Shard management for Arch programs"
license = "MIT"
repository = "https://github.com/saturnbtc/satellite"
keywords = ["satellite", "shard"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
arch_program = { version = "0.5.15" }
bitcoin = "0.32.5"
bytemuck = "1.14"
satellite-bitcoin = { workspace = true }
satellite-lang = { workspace = true }
ordinals = { version = "0.0.14", optional = true }

[features]
default = ["runes", "utxo-consolidation"]
runes = ["satellite-bitcoin/runes", "ordinals"]
utxo-consolidation = ["satellite-bitcoin/utxo-consolidation"]
utoipa = ["satellite-bitcoin/utoipa"]
serde = ["satellite-bitcoin/serde"]