[package]
name = "satellite-apl"
version.workspace = true
authors = ["Anchor Maintainers <accounts@200ms.io>"]
edition.workspace = true
license = "Apache-2.0"
description = "CPI clients for SPL programs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["associated_token", "token", "metadata"]
satellite-debug = ["satellite-lang/satellite-debug"]
associated_token = ["apl-associated-token-account"]
idl-build = ["satellite-lang/idl-build"]
stake = ["borsh"]
token = ["apl-token"]
metadata = ["apl-token-metadata"]

[dependencies]
satellite-lang = { workspace = true, features = ["derive"] }
borsh = { version = "0.10.3", optional = true }
apl-associated-token-account = { version = "0.5.13", features = ["no-entrypoint"], optional = true }
apl-token = { version = "0.5.13", features = ["no-entrypoint"], optional = true }
apl-token-metadata = { version = "0.5.13", features = ["no-entrypoint"], optional = true }
