[package]
name = "satellite-collections"
version = "0.1.0"
edition = "2021"
description = "Collection data structures and helpers for the Satellite Bitcoin project."
license = "MIT OR Apache-2.0"
repository = "https://github.com/saturnbtc/satellite"
keywords = ["bitcoin", "collections"]
categories = ["cryptography::cryptocurrencies", "data-structures"]

[features]
borsh = ["dep:borsh"]

[dependencies]
bytemuck = { version = "1.14", features = ["derive", "min_const_generics"] }
serde = { version = "1.0.198", features = ["derive"] }
borsh = { version = "1.4.0", features = ["derive"], optional = true }

[dev-dependencies]
proptest = "1.5.0"
