[package]
name = "satellite-bitcoin-transactions"
version = "0.1.3"
edition = "2021"
description = "Bitcoin transaction utilities and UTXO management for Satellite."
license = "MIT OR Apache-2.0"
repository = "https://github.com/saturnbtc/satellite"
keywords = ["bitcoin", "transactions", "utxo"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
arch_program = { version = "0.5.13" }
bitcoin = { version = "0.32.5", features = ["serde"] }
hex = "0.4.3"
satellite-collections = { version = "0.1.3", path = "../collections" }
satellite-math = { version = "0.1.3", path = "../math" }
thiserror = "1.0.61"
num-derive = { version = "0.4.0" }
num-traits = { version = "0.2" }
bytemuck = { version = "1.14", features = ["derive", "min_const_generics"] }
serde = { version = "1.0.198", features = ["derive"], optional = true }
utoipa ={ version = "5.3.1", features = [
    "axum_extras",
    "yaml",
    "preserve_order",
    "chrono",
    "decimal",
], optional = true }
ordinals = { version = "0.0.14", optional = true }

[dev-dependencies]
serde_json = { version = "1.0.116" }
proptest = "1.5.0"

[features]
default = ["utxo-consolidation", "serde"]
runes = ["ordinals"]
utxo-consolidation = []
serde = ["dep:serde"]
utoipa = ["dep:utoipa"]
