[package]
name = "satellite-bitcoin-transactions"
version.workspace = true
edition.workspace = true
description = "Bitcoin transaction utilities and UTXO management for Satellite."
license = "MIT OR Apache-2.0"
repository = "https://github.com/saturnbtc/satellite"
keywords = ["bitcoin", "transactions", "utxo"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
arch_program = { version = "0.5.15" }
bitcoin = { version = "0.32.5", features = ["serde"] }
hex = "0.4.3"
satellite-collections = { workspace = true }
satellite-math = { workspace = true }
thiserror = "1.0.61"
num-derive = { version = "0.4.0" }
num-traits = { version = "0.2" }
bytemuck = { version = "1.14", features = ["derive", "min_const_generics"] }
serde = { version = "1.0.198", features = ["derive"], optional = true }
utoipa ={ version = "5.3.1", features = [
    "axum_extras",
    "yaml",
    "preserve_order",
    "chrono",
    "decimal",
], optional = true }
ordinals = { version = "0.0.14", optional = true }

[dev-dependencies]
serde_json = { version = "1.0.116" }
proptest = "1.5.0"

[features]
default = ["utxo-consolidation", "serde"]
runes = ["ordinals"]
utxo-consolidation = []
serde = ["dep:serde"]
utoipa = ["dep:utoipa"]
