[package]
name = "satellite-attribute-access-control"
version = "0.31.1"
authors = ["Satellite Maintainers <contact@saturnbtc.io>"]
repository = "https://github.com/saturnbtc/satellite"
license = "Apache-2.0"
description = "Satellite attribute macro for instruction access control"
edition = "2021"

[lib]
proc-macro = true

[features]
satellite-debug = ["satellite-syn/satellite-debug"]

[dependencies]
satellite-syn = { path = "../../syn", version = "0.31.1" }
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
