[package]
name = "satellite-attribute-account"
version = "0.31.1"
authors = ["Satellite Maintainers <contact@saturnbtc.io>"]
repository = "https://github.com/saturnbtc/satellite"
license = "Apache-2.0"
description = "Satellite attribute macro for defining an account"
edition = "2021"

[lib]
proc-macro = true

[features]
satellite-debug = ["satellite-syn/satellite-debug"]
idl-build = ["satellite-syn/idl-build"]
lazy-account = []

[dependencies]
satellite-syn = { path = "../../syn", version = "0.31.1", features = ["hash"] }
hex = "0.4"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
