[package]
name = "satellite-attribute-account"
version.workspace = true
authors = ["Satellite Maintainers <contact@saturnbtc.io>"]
repository = "https://github.com/saturnbtc/satellite"
license = "Apache-2.0"
description = "Satellite attribute macro for defining an account"
edition.workspace = true

[lib]
proc-macro = true

[features]
satellite-debug = ["satellite-syn/satellite-debug"]
idl-build = ["satellite-syn/idl-build"]
lazy-account = []

[dependencies]
satellite-syn = { workspace = true, features = ["hash"] }
hex = "0.4"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
