[package]
name = "satellite-attribute-error"
version.workspace = true
authors = ["Satellite Maintainers <contact@saturnbtc.io>"]
repository = "https://github.com/saturnbtc/satellite"
license = "Apache-2.0"
description = "Satellite attribute macro for creating error types"
edition.workspace = true

[lib]
proc-macro = true

[features]
satellite-debug = ["satellite-syn/satellite-debug"]
idl-build = ["satellite-syn/idl-build"]

[dependencies]
satellite-syn = { workspace = true }
quote = "1"
syn = { version = "1", features = ["full"] }
