[package]
name = "satellite-attribute-event"
version.workspace = true
authors = ["Satellite Maintainers <contact@saturnbtc.io>"]
repository = "https://github.com/saturnbtc/satellite"
license = "Apache-2.0"
description = "Satellite attribute macro for defining an event"
rust-version = "1.60"
edition.workspace = true

[lib]
proc-macro = true

[features]
satellite-debug = ["satellite-syn/satellite-debug"]
event-cpi = ["satellite-syn/event-cpi"]
idl-build = ["satellite-syn/idl-build"]

[dependencies]
satellite-syn = { workspace = true, features = ["hash"] }
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
