[package]
name = "satellite-attribute-program"
version = "0.31.1"
authors = ["Satellite Maintainers <contact@saturnbtc.io>"]
repository = "https://github.com/saturnbtc/satellite"
license = "Apache-2.0"
description = "Satellite attribute macro for defining a program"
edition = "2021"

[lib]
proc-macro = true

[features]
satellite-debug = ["satellite-syn/satellite-debug"]
idl-build = ["satellite-syn/idl-build"]
interface-instructions = ["satellite-syn/interface-instructions"]

[dependencies]
satellite-lang-idl = { path = "../../../idl", version = "0.1.2", features = ["convert"] }
satellite-syn = { path = "../../syn", version = "0.31.1" }
anyhow = "1"
hex = "0.4.3"
heck = "0.3"
proc-macro2 = "1"
quote = "1"
serde_json = "1"
syn = { version = "1", features = ["full"] }
