[package]
name = "satellite-attribute-program"
version.workspace = true
authors = ["Satellite Maintainers <contact@saturnbtc.io>"]
repository = "https://github.com/saturnbtc/satellite"
license = "Apache-2.0"
description = "Satellite attribute macro for defining a program"
edition.workspace = true

[lib]
proc-macro = true

[features]
satellite-debug = ["satellite-syn/satellite-debug"]
idl-build = ["satellite-syn/idl-build"]
interface-instructions = ["satellite-syn/interface-instructions"]

[dependencies]
satellite-lang-idl = { workspace = true, features = ["convert"] }
satellite-syn = { workspace = true }
anyhow = "1"
hex = "0.4.3"
heck = "0.3"
proc-macro2 = "1"
quote = "1"
serde_json = "1"
syn = { version = "1", features = ["full"] }
