[package]
name = "satellite-derive-accounts"
version.workspace = true
authors = ["Satellite Maintainers <contact@saturnbtc.io>"]
repository = "https://github.com/saturnbtc/satellite"
license = "Apache-2.0"
description = "Satellite Derive macro for accounts"
edition.workspace = true

[lib]
proc-macro = true

[features]
allow-missing-optionals = ["satellite-syn/allow-missing-optionals"]
satellite-debug = ["satellite-syn/satellite-debug"]
idl-build = ["satellite-syn/idl-build"]
init-if-needed = ["satellite-syn/init-if-needed"]

[dependencies]
satellite-syn = { workspace = true }
quote = "1"
syn = { version = "1", features = ["full"] }
