[package]
name = "satellite-derive-serde"
version = "0.31.1"
authors = ["Satellite Maintainers <contact@saturnbtc.io>"]
repository = "https://github.com/saturnbtc/satellite"
license = "Apache-2.0"
description = "Satellite Derive macro for serialization and deserialization"
edition = "2021"

[lib]
proc-macro = true

[features]
idl-build = ["satellite-syn/idl-build"]
lazy-account = []

[dependencies]
satellite-syn = { path = "../../syn", version = "0.31.1" }
borsh-derive-internal-satellite = { path = "../../../borsh-derive-internal", version = "0.11.0" }
proc-macro2 = "1"
syn = { version = "1", features = ["full"] }
quote = "1"
