[package]
name = "satellite-derive-serde"
version.workspace = true
authors = ["Satellite Maintainers <contact@saturnbtc.io>"]
repository = "https://github.com/saturnbtc/satellite"
license = "Apache-2.0"
description = "Satellite Derive macro for serialization and deserialization"
edition.workspace = true

[lib]
proc-macro = true

[features]
idl-build = ["satellite-syn/idl-build"]
lazy-account = []

[dependencies]
satellite-syn = { workspace = true }
borsh-derive-internal-satellite = { path = "../../../borsh-derive-internal", version = "0.11.0" }
proc-macro2 = "1"
syn = { version = "1", features = ["full"] }
quote = "1"
