[package]
name = "remaining-accounts"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "remaining_accounts"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["satellite-lang/idl-build", "satellite-apl/idl-build"]

[dependencies]
satellite-lang = { path = "../../../../lang", features = ["init-if-needed"] }
satellite-apl = { path = "../../../../spl" }
