[package]
name = "metadata"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "metadata"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
satellite-debug = []
no-log-ix-name = []
idl-build = ["satellite-lang/idl-build", "satellite-apl/idl-build"]

[dependencies]
satellite-lang = { path = "../../../../../lang" }
satellite-apl = { path = "../../../../../spl", features = ["metadata"] }
